packages/dart_edge_vad/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_vad/dart_edge_vad.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
  )
>()
external ffi.Pointer<ffi.Char> dart_edge_vad_detect_silero(
  ffi.Pointer<ffi.Char> request_json,
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_vad_free_string(ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Void>)>()
external int dart_edge_vad_initialize_dart_api_dl(ffi.Pointer<ffi.Void> data);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_vad_native_abi_version();

@ffi.Native<
  ffi.Pointer<DartEdgeVadPool> Function(ffi.UintPtr, ffi.UintPtr, ffi.Int64)
>()
external ffi.Pointer<DartEdgeVadPool> dart_edge_vad_pool_create(
  int worker_count,
  int max_queue_size,
  int completion_port,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<DartEdgeVadPool>)>()
external void dart_edge_vad_pool_free(ffi.Pointer<DartEdgeVadPool> pool);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<DartEdgeVadPool>)>()
external ffi.Pointer<ffi.Char> dart_edge_vad_pool_metrics(
  ffi.Pointer<DartEdgeVadPool> pool,
);

@ffi.Native<
  ffi.Int64 Function(
    ffi.Pointer<DartEdgeVadPool>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
  )
>()
external int dart_edge_vad_pool_submit_silero(
  ffi.Pointer<DartEdgeVadPool> pool,
  ffi.Pointer<ffi.Char> request_json,
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<DartEdgeVadPool>, ffi.Int64)
>()
external ffi.Pointer<ffi.Char> dart_edge_vad_pool_take_result(
  ffi.Pointer<DartEdgeVadPool> pool,
  int job_id,
);

@ffi.Native<ffi.Pointer<DartEdgeVadStream> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<DartEdgeVadStream> dart_edge_vad_stream_create(
  ffi.Pointer<ffi.Char> request_json,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<DartEdgeVadStream>)>()
external void dart_edge_vad_stream_free(ffi.Pointer<DartEdgeVadStream> stream);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<DartEdgeVadStream>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
    ffi.Int32,
  )
>()
external ffi.Pointer<ffi.Char> dart_edge_vad_stream_process(
  ffi.Pointer<DartEdgeVadStream> stream,
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
  int flush,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> dart_edge_vad_take_last_error();

@ffi.Native<ffi.Void Function(ffi.Pointer<DartEdgeVadTrimProcessResult>)>()
external void dart_edge_vad_trim_process_result_free(
  ffi.Pointer<DartEdgeVadTrimProcessResult> result,
);

@ffi.Native<
  ffi.Pointer<DartEdgeVadTrimStream> Function(ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<DartEdgeVadTrimStream> dart_edge_vad_trim_stream_create(
  ffi.Pointer<ffi.Char> request_json,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<DartEdgeVadTrimStream>)>()
external void dart_edge_vad_trim_stream_free(
  ffi.Pointer<DartEdgeVadTrimStream> stream,
);

@ffi.Native<
  ffi.Pointer<DartEdgeVadTrimProcessResult> Function(
    ffi.Pointer<DartEdgeVadTrimStream>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
    ffi.Int32,
  )
>()
external ffi.Pointer<DartEdgeVadTrimProcessResult>
dart_edge_vad_trim_stream_process(
  ffi.Pointer<DartEdgeVadTrimStream> stream,
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
  int flush,
);

final class DartEdgeVadPool extends ffi.Opaque {}

final class DartEdgeVadStream extends ffi.Opaque {}

final class DartEdgeVadTrimProcessResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> output_ptr;

  @ffi.UintPtr()
  external int output_len;

  @ffi.UintPtr()
  external int output_capacity;

  external ffi.Pointer<ffi.Char> result_json;
}

final class DartEdgeVadTrimStream extends ffi.Opaque {}
